--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="bg-red-100 p-6">
         <img src="images/4_img.png" alt="Screenshot of project 4" class="mb-4 mx-auto">
         <h3 class="font-semibold">My Portfolio Website</h3>
-        <p><a href="#" target="_blank" class="text-black-600"><i class="fab fa-github fa-3x mt-2"></i></a></p>
+        <p><a href="https://github.com/phun333/portfolio-website" target="_blank" class="text-black-600"><i class="fab fa-github fa-3x mt-2"></i></a></p>
       </div>
     </div>
   </div>
