--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div class="ml-10 text-left">
             <h1 class="text-2xl font-semibold mb-2">Im a Software Engineer Student</h1>
             <p class="mb-3">who passionate about learning the technologies of Java and Python and is also committed to continuous learning and trying to develop himself in the web tech.</p>
-            <p>im currently learning Spring Boot and Web Dev.</p>
+            <p>im currently learning Web Dev.</p>
             <div class="flex mt-6">
               <a href="https://github.com/phun333" target="_blank" class="text-gray-600 mr-4"><i class="fab fa-github fa-3x"></i></a>
               <a href="https://www.linkedin.com/in/ali-selvet/" target="_blank" class="text-gray-600 mr-4"><i class="fab fa-linkedin fa-3x"></i></a>
