--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
   <meta name="author" content="Oskar Wickström" />
   <meta name="dcterms.date" content="2024-08-26" />
-  <title>The Monospace Web</title>
-  <link rel="stylesheet" href="reset.css" />
+  <title>Ali Selvet | Porfolio</title>
   <link rel="stylesheet" href="index.css" />
 </head>
 <body>
-<h1 id="about-me">ali selvet</h1>
+<h1 id="about-me">Ali Selvet</h1>
 <nav id="TOC" role="doc-toc">
 <h2 id="toc-title">Contents</h2>
 <ul class="incremental">
